@@ -1,5 +1,15 @@
 2004-12-08  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/javax/imageio/stream/FileImageOutputStream.java:
+	Resynced with GNU Classpath.
+	
+	2004-12-07  Michael Koch  <konqueror@gmx.de>
+
+	* javax/imageio/stream/FileImageOutputStream.java:
+	Implemented.
+	
+2004-12-08  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/util/Timer.java:
 	Resynced with GNU Classpath.
 	
